2002-03-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-util.el (w3m-function-max-args): Alias to `function-max-args'
	under XEmacs, otherwise define it as a function.
	(symbol-for-testing-whether-colon-keyword-is-available-or-not):
	Use `dont-compile' instead of `eval'.

	* shimbun/mew-shimbun.el (mew-shimbun-goto-folder): Use
	`w3m-function-max-args' to examine how many arguments does
	`mew-summary-ls' take; use `dont-compile' to call `mew-summary-ls'
	with two arguments.

2002-03-02  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* Release emacs-w3m-1.2.5 from emacs-w3m-1_2 branch.

2002-03-01  Hideyuki SHIRAI  <shirai@meadowy.org>

	* shimbun/mew-shimbun.el (mew-shimbun-retrieve-article)
	(mew-shimbun-re-retrieve-article): Sort headers by the date.

	* shimbun/sb-slashdot-jp.el
	(shimbun-slashdot-jp-parse-date-string): `12PM' means noon.
	'12AM' means at night.

2002-03-01  Yuuichi Teranishi  <teranisi@gohome.org>

	* shimbun/sb-lump.el (shimbun-lump): Add `check-interval'.
	(shimbun-lump-check-interval): New inline function.
	(shimbun-lump-check-p): Use it.

2002-03-01  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-slashdot-jp.el (shimbun-slashdot-jp-story-count): New
	internal constant.
	(shimbun-slashdot-jp-make-headers): The action when range is not
	set is changed.  Search old stories.
	(shimbun-index-url): Removed.
	(shimbun-slashdot-jp-make-story-headers): Change argument spec.
	Refer the above constant to decide the URL of the index page.
	(shimbun-slashdot-jp-search-comment-head): Ignore a garbage line
	between author and date.

2002-03-01  Yuuichi Teranishi  <teranisi@gohome.org>

	* octet.el (octet-find-file): Decode even in the read-only buffer.

2002-03-01  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-lump.el (shimbun-get-group-header-alist): Add the 2nd
	optional argument.
	(shimbun-headers): Call the above function with the 2nd argument.

	* shimbun/sb-wired.el (shimbun-get-group-header-alist): Ignore the